[package]
name = "enigma_duel_match_maker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.193", features = ["derive"]}
serde-reflection = "0.3.6"
serde_json = "1.0.108"
rocket = "0.4.5"
rand = "0.8.5"
cosmwasm-std = "2.0.4"

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["handlebars_templates", "tera_templates"]
